--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
+    "csv-parse": "^5.3.0",
     "debug": "^4.3.4",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
